--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,5 @@ add_executable(bybitmm main.cpp
         src/client/ws_order_client.h
         src/client/ws_execution_client.h
         src/client/ws_order_entry_client.h
-        src/utils/spsc_queue_v1.h
-        src/utils/spsc_padded_queue.h)
+        src/spsc_queue/spsc_queue_v1.h
+        src/spsc_queue/spsc_padded_queue.h)
