--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,21 @@
 cmake_minimum_required(VERSION 3.29)
-project(bybitmm)
+project(crypto_mm)
 
 set(CMAKE_CXX_STANDARD 20)
 
 find_package(Boost)
 
-add_executable(bybitmm main.cpp
-        src/strategy/feature_engine.h
-        src/strategy/order_manager.h
-        src/strategy/market_maker.h
+add_executable(crypto_mm main.cpp
+        src/trading/feature_engine.h
+        src/trading/order_manager.h
+        src/trading/market_maker.h
         src/client/ws_order_book_client.h
         src/client/ws_trades_client.h
         src/client/ws_order_client.h
         src/client/ws_execution_client.h
         src/client/ws_order_entry_client.h
-        src/spsc_queue/spsc_queue_v1.h
-        src/spsc_queue/spsc_queue_v2.h
-        src/spsc_queue/spsc_queue_v3.h
-        src/util/padded_atomic.h
-        src/spsc_queue/spsc_queue_v4.h)
+        src/util/spsc_queue.h
+        src/util/padded_value.h
+        src/trading/trading_engine.h)
 
-target_link_libraries(bybitmm boost::boost)
+target_link_libraries(crypto_mm boost::boost)
