--- a/conandata.yml
+++ b/conandata.yml
@@ -2,4 +2,6 @@
 # To keep your changes, remove these comment lines, but the plugin won't be able to modify your requirements
 
 requirements:
+  - "openssl/3.3.1"
+  - "nlohmann_json/3.11.3"
   - "boost/1.86.0"
